# umock-c

./: .gitignore  CMakeLists.txt  readme.md
cmake/: CompilerFlags.cmake
configs/: umock_cFunctions.cmake
inc/: umock_c.h  umock_c_internal.h  umockcallrecorder.h
jenkins/: linux_c_gcc44.sh  osx_c.sh  ubuntu_clang.sh  windows_c.cmd  windows_vs2008_c.cmd  windowsce_c.cmd
src/: umock_c.c  umockcallrecorder.c
tests/umock_c_int/: test_dependency.h  umock_c_int.c
tests/umock_c_negt_noini_ut/: CMakeLists.txt
